Updated Beacon() data types